...
					<Text className="text-sm uppercase tracking-[-1px] text-white">
						{firstname.charAt(0)} {lastname.charAt(0)}
					</Text>
				</View>
			)}
			<View>
				<Text className="text-sm text-defaultGray">Bonjour,</Text>
				<Text className="font-semibold text-lg text-primary">
					{firstname} {lastname}
				</Text>
			</View>
			<View className="ml-auto">
				<DropdownMenu.Root>
...
