appId: com.anonymze.simplylife
---
- launchApp:
    clearState: true
- tapOn:
    id: "email-input"
- inputText: "test@test.fr"
- tapOn:
    id: "password-input"
- inputText: "azerty123456"
- tapOn:
    id: "login-button"
- assertVisible: "Bonjour"

